// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlashcardButton Container 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained WordsList__viewModeButton"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Flashcard view
  </span>
</button>
`;

exports[`FlashcardButton Presentation: flashcard mode is active 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained WordsList__viewModeButton MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Cancel flashcard view
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`FlashcardButton Presentation: flashcard mode is inactive 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained WordsList__viewModeButton"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Flashcard view
  </span>
</button>
`;
